@@ -1,5 +1,7 @@
 20020703
  - (bal) Updated contrib/cygwin/  patch by vinschen@redhat.com 
+ - (bal) minor correction to utimes() replacement.  Patch by
+   onoe@sm.sony.co.jp
 
 20020702
  - (djm) Use PAM_MSG_MEMBER for PAM_TEXT_INFO messages, use xmalloc & 
@@ -1208,4 +1210,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2314 2002/07/03 23:33:19 mouring Exp $
+$Id: ChangeLog,v 1.2315 2002/07/03 23:50:00 mouring Exp $
